--- a/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+  <group android:scaleX="0.46"
+      android:scaleY="0.46"
+      android:translateX="276.48"
+      android:translateY="276.48">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M327.5,224.1C327.5,224.1 349.6,229 384.9,239.8C496.9,274.1 596.8,340.4 676,429.4M553.4,470.5H553M277.6,345.4C321.7,357.5 349.8,397.9 349.8,446.9C349.8,515.4 283.4,567.7 217.8,549M356.7,791.5C334.1,751.7 340.7,696.6 375.4,661.9C416.7,620.5 483,619.7 523.4,660.1C530.2,666.9 537.9,678.6 542.4,686.6M549.9,716.5C537.8,669.5 498.1,635 451,635C394.2,635 348.2,685 348.2,746.8C348.2,779.5 361.1,808.9 381.7,829.3M439,791.5L785.9,557.9C845.1,518 874.7,498.1 880.1,461.7C885.5,425.4 866,401 827.1,352.2C737.8,240.1 616.5,156.6 477.7,116.7C424.8,101.5 398.4,93.9 370.1,110C341.8,126.1 332.6,157.5 314.1,220.3L200.7,606C147.6,786.5 121.1,876.8 165.5,911.3C209.9,945.8 286.2,894.4 439,791.5Z"
+        android:strokeWidth="50"
+        android:fillColor="#00000000"
+        android:strokeColor="#FFD558"
+        android:strokeLineCap="round"/>
+  </group>
 </vector>
